if(MINGW)
  set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
  link_libraries(mingw32 SDL2main SDL2 SDL2_image)
  add_executable(input_display WIN32 main.cpp conf.cpp conf_line.cpp controller.cpp controller_part.cpp real_part.cpp)
else(MINGW)
  link_libraries(SDL2 SDL2_image)
  add_executable(input_display main.cpp conf.cpp conf_line.cpp controller.cpp controller_part.cpp real_part.cpp)
endif(MINGW)
